Fix hyphenated words not to overflow on Android

This patch fixes to choose the correct hyphenation point when the word
has multiple hyphenation points on Android.

The line breaker computes the number of characters that can fit and
computes that last hyphenation point within the number. The number was
not used correctly in the Android hyphenation engine.

The fix is about 5 lines in |HyphenationMinikin::lastHyphenLocation|,
but the test isn't small. The hyphenation engine loads dictionaries
using a mojo service, but since the mojo service is not available in
unit tests, the test creates the engine from the dictionary file it
loaded.

BUG=692094

Review-Url: https://codereview.chromium.org/2692233005
Cr-Commit-Position: refs/heads/master@{#451519}

Former-commit-id: dd1e6431c28b8f3de55d580b66662859baf9d28b